--- a/inventory.yaml
+++ b/inventory.yaml
@@ -3,12 +3,17 @@ all:
   hosts:
     ## [all Ansible hosts]
   children:
+    debian:
+      children:
+        raspberry_pi_os: { }
+        ubuntu: { }
     k3s_server:
       ## [at most one K3s server]
     k3s_agent:
       ## [all K3s agents]
     raspberry_pi_hw:
-      ## [all Raspberry Pi hardware]
+      children:
+        raspberry_pi_os: { }
     raspberry_pi_os:
       ## [all hosts running Raspberry Pi OS]
       vars:
