--- a/roles/k3s-node-up/tasks/main.yaml
+++ b/roles/k3s-node-up/tasks/main.yaml
@@ -20,4 +20,5 @@
   template:
     dest: /etc/rancher/k3s/registries.yaml
     src: registries.yaml.j2
+  notify: restart k3s service
   when: k3s_container_registry_mirror_urls
