--- a/roles/k3s-server-up/handlers/main.yaml
+++ b/roles/k3s-server-up/handlers/main.yaml
@@ -1,4 +1,8 @@
 ---
+- name: restart k3s service
+  service:
+    name: k3s
+    state: restarted
 - name: fix access to kubeconfig
   local_action:
     mode: '600'
