--- a/roles/k3s-agent-up/defaults/main.yaml
+++ b/roles/k3s-agent-up/defaults/main.yaml
@@ -1,11 +1,7 @@
 ---
 ansible_become: yes
+# Where to store build files for K3s?
 k3s_build_dir: build
-k3s_flannel_iface: null
-k3s_labels: [ ]
-k3s_node_external_ip: null
-k3s_node_ip: null
-k3s_taints: [ ]
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.23.3+k3s1
 proxy_url: null
