--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -1,16 +1,11 @@
 ---
 ansible_become: yes
+# Where to store build files for K3s?
 k3s_build_dir: build
-k3s_cni_plugin: flannel
-k3s_flannel_backend: vxlan
-k3s_flannel_iface: null
+# Where to find resource manifests to apply after installing K3s?
 k3s_hooks_dir: hooks
-k3s_labels: [ ]
-k3s_node_external_ip: null
-k3s_node_ip: null
-k3s_server_schedule_pods: '{{ groups.k3s_agent | length == 0 }}'
-k3s_server_url: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
-k3s_taints: [ ]
+# If you want to use a load balancer for the K3s masters, put its URL here. Otherwise, don't touch:
+k3s_url: null
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.23.3+k3s1
 proxy_url: null
