--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -19,9 +19,9 @@
   failed_when: no
   lineinfile:
     backrefs: yes
-    line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
+    line: '\g<1> cgroup_enable=memory cgroup_memory=1\g<2>'
     path: '{{ boot_directory }}/{{ item }}'
-    regexp: '^(.*console=tty1)(?: cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1)?(.*)$'
+    regexp: '^(.*console=tty1)(?: cgroup_enable=memory cgroup_memory=1)?(.*)$'
   notify: reboot
   with_items:
     - cmdline.txt
