Fix apt install for K3s and improve security.

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
 #forks = 7
+## Disabled for security reasons - see https://docs.ansible.com/ansible/devel/reference_appendices/faq.html#when-is-it-unsafe-to-bulk-set-task-arguments-from-a-variable :
+inject_facts_as_vars = no
 inventory = inventory.yaml
