Fix configuration of locale and change the default to en_US.UTF-8.

--- a/roles/debian-up/defaults/main.yaml
+++ b/roles/debian-up/defaults/main.yaml
@@ -1,6 +1,6 @@
 ---
 ansible_become: yes
-locale: C.UTF-8
+locale: en_US.UTF-8
 no_proxy: 127.0.0.1,.local,localhost
 proxy_url: null
 timezone: UTC
