--- a/inventory.yaml
+++ b/inventory.yaml
@@ -55,7 +55,7 @@ all:
     #k3s_url: null
     ## https://github.com/rancher/k3s/releases :
     #k3s_version: v1.24.3+k3s1
-    #locale: C.UTF-8
+    #locale: en_US.UTF-8
     #no_proxy: 127.0.0.1,.local,localhost
     #proxy_url: http://10.0.0.1:3128/
     #rpi_update: yes
