--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -12,7 +12,7 @@
   apt:
     upgrade: dist
   notify: reboot
-- name: apt install <common packages...>
+- name: apt install <packages...>
   apt:
     name:
       - apt-transport-https
