Reboot only once if required and do it one-by-one for the K3s servers.

--- a/roles/debian-down/tasks/main.yaml
+++ b/roles/debian-down/tasks/main.yaml
@@ -8,7 +8,7 @@
 #    path: /etc/environment
 #    regexp: '^\s*{{ item }}\s*='
 #    state: absent
-#  notify: reboot
+#  notify: require reboot
 #  with_items:
 #    - http_proxy
 #    - HTTP_PROXY
