--- a/roles/raspberry-pi-hw-down/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-down/tasks/main.yaml
@@ -6,7 +6,7 @@
     line: '\g<1>\g<2>'
     path: '{{ boot_directory }}/{{ item }}'
     regexp: '^(.*console=tty1)(?: cgroup_enable=memory cgroup_memory=1)?(.*)$'
-  notify: reboot
+  notify: require reboot
   with_items:
     - cmdline.txt
     - nobtcmd.txt
