Switch to legacy iptables.

--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -37,3 +37,15 @@
         dest: /etc/default/locale
         src: locale.j2
   notify: require reboot
+# See https://docs.k3s.io/advanced#additional-preparation-for-debian-buster-based-distributions :
+- name: flush iptables
+  iptables:
+    flush: yes
+- name: use iptables-legacy
+  alternatives:
+    name: iptables
+    path: /usr/sbin/iptables-legacy
+- name: use ip6tables-legacy
+  alternatives:
+    name: ip6tables
+    path: /usr/sbin/ip6tables-legacy
