--- a/down.yaml
+++ b/down.yaml
@@ -1,21 +1,29 @@
 ---
-- hosts:
+- gather_facts: yes
+  hosts:
+    - all
+- gather_facts: no
+  hosts:
     - k3s_agent
   roles:
     - k3s-agent-down
-- hosts:
+- gather_facts: no
+  hosts:
     - k3s_server
   roles:
     - k3s-server-down
-#- hosts:
+#- gather_facts: no
+#  hosts:
 #    - raspberry_pi_os
 #  roles:
 #    - raspberry-pi-os-down
-#- hosts:
+#- gather_facts: no
+#  hosts:
 #    - debian
 #  roles:
 #    - debian-down
-#- hosts:
+#- gather_facts: no
+#  hosts:
 #    - raspberry_pi_hw
 #  roles:
 #    - raspberry-pi-hw-down
