--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -1,28 +1,27 @@
 ---
-- name: "set arm_64bit={{ arm_64bit }}"
-  lineinfile:
-    insertafter: '^\s*\[\s*all\s*\]'
-    line: "arm_64bit={{ arm_64bit }}"
-    path: '{{ boot_directory }}/config.txt'
-    regexp: '^\s*#?\s*arm_64bit\s*='
-  notify: require reboot
-  when: arm_64bit is defined
-- name: "#set arm_64bit="
-  lineinfile:
-    insertafter: '^\s*\[\s*all\s*\]'
-    line: "#arm_64bit="
-    path: '{{ boot_directory }}/config.txt'
-    regexp: '^\s*#?\s*arm_64bit\s*='
-  notify: require reboot
-  when: arm_64bit is not defined
-- name: ensure cgroup kernel params
-  failed_when: no
-  lineinfile:
-    backrefs: yes
-    line: '\g<1> cgroup_enable=memory cgroup_memory=1\g<2>'
-    path: '{{ boot_directory }}/{{ item }}'
-    regexp: '^(.*console=tty1)(?: cgroup_enable=memory cgroup_memory=1)?(.*)$'
-  notify: require reboot
-  with_items:
-    - cmdline.txt
-    - nobtcmd.txt
+- block:
+    - name: "set arm_64bit={{ arm_64bit }}"
+      lineinfile:
+        insertafter: '^\s*\[\s*all\s*\]'
+        line: "arm_64bit={{ arm_64bit }}"
+        path: '{{ boot_directory }}/config.txt'
+        regexp: '^\s*#?\s*arm_64bit\s*='
+      when: arm_64bit is defined
+    - name: "#set arm_64bit="
+      lineinfile:
+        insertafter: '^\s*\[\s*all\s*\]'
+        line: "#arm_64bit="
+        path: '{{ boot_directory }}/config.txt'
+        regexp: '^\s*#?\s*arm_64bit\s*='
+      when: arm_64bit is not defined
+    - name: Ensure CGroup Kernel Parameters
+      ignore_errors: yes
+      lineinfile:
+        backrefs: yes
+        line: '\g<1> cgroup_enable=memory cgroup_memory=1\g<2>'
+        path: '{{ boot_directory }}/{{ item }}'
+        regexp: '^(.*console=tty1)(?: cgroup_enable=memory cgroup_memory=1)?(.*)$'
+      with_items:
+        - cmdline.txt
+        - nobtcmd.txt
+  notify: Require Reboot
